namespace Assets.Project.Scripts
{
    public class Constants
    {
        public class CharacterAnimationParameters
        {
            public const string Start = "Start";
            public const string Dead_Collision = "Dead_Collision";
            public const string Wave_2 = "Wave_2";
            public const string Wave_1 = "Wave_1";
            public const string Dead_Fall = "Dead_Fall";
            public const string Land_Good = "Land_Good";
            public const string Jump = "Jump";
            public const string SlidingRight = "SlidingRight";
            public const string SlidingLeft = "SlidingLeft";
        }
    }
}
